--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Neural Network weights
+*.pth
+
+# Images from train and test
+*.jpg
+*.png
+*.jpge
